# UW-Course-SLN-Web-Scraper

./: .env  .gitignore  .pylintrc  .travis.yml  Dockerfile  README.md  config.py  docker_build.sh  docker_run.sh  handle_args.py  main.py  pyproject.toml  requirements.txt  scrap_course_description.py  settings.py  setup.py
.github/: pull_request_template.md
docs/: notes.md
scraper/: __init__.py  course.py  course_sln.py  instructor.py  room.py  scraper.py  special.py  utils.py
src/: app.py  course.py  example_course.txt  handle_args.py  main.py  migration.py  models.py  scrap_course_description.py  scraper.py  utility.py  utils.py
src/test/: test.py
src/utils/: logger.py  parser.py  proxy.py  utilities.py  validation.py
test/: test.py
tests/: css.html
tests/integration_tests/: test_scraper.py
tests/unit_tests/: test_course_globals.py  test_course_header_row.py  test_course_main_row.py  test_utils.py
