[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aniso8601 = "8.0.0"
autoenv = "1.0.0"
beautifulsoup4 = "4.8.2"
bs4 = "0.0.1"
certifi = "2019.11.28"
chardet = "3.0.4"
Click = "7.0"
dnspython = "1.16.0"
Flask = "1.1.1"
Flask-RESTful = "0.3.7"
idna = "2.8"
itsdangerous = "1.1.0"
Jinja2 = "2.10.3"
MarkupSafe = "1.1.1"
protobuf = "3.6.1"
requests = "2.22.0"
six = "1.13.0"
soupsieve = "1.9.5"
urllib3 = "1.25.7"
Werkzeug = "0.16.0"
pytest = "^6.0.1"
requests_file = "^1.5.1"
pytest-mock = "^3.3.1"
mock = "^4.0.2"
flake8 = "^3.8.3"
pylint = "^2.6.0"
wrapt = "^1.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
